--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -117,12 +117,14 @@
     height: 100%;
     padding: 100px 0px;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .aboutInfoOne {
     display: flex;
-    width: 968px;
-    justify-content: space-between;
+    width: 60%;
+    gap: 50px;
     align-items: center;
     padding-bottom: 100px;
 }
@@ -170,12 +172,21 @@
     color: #FFFFFF;
 }
 
+.aboutInfoImage img {
+    width: 100%;
+    height: 100%;
+}
+
 .aboutInfoImage {
     animation: 1s ani;
     -webkit-animation: 1s ani;
     animation-iteration-count: 1;
     animation-delay: 0.5s;
-    padding-right: 150px;
+    padding-right: 0px;
+    width: 305px;
+    height: 456px;
+    padding-right: 20px;
+    background-color: transparent;
 }
 
 @keyframes ani {
@@ -199,9 +210,9 @@
 
 .aboutInfoTwoImg {
     position: absolute;
-    width: 371px;
+    width: 411px;
     height: 556px;
-    right: 30px;
+    left: 70%;
     top: 245px;
     animation: 1s animate;
     -webkit-animation: 1s animate;
@@ -209,10 +220,33 @@
     animation-delay: 1s;
     display: flex;
     align-items: center;
+    justify-content: end;
+}
+
+.aboutInfoTwoImgText {
+    transform: rotate(-90deg);
+    position: absolute;
+    left: -230px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color: transparent;
+}
+
+.aboutInfoTwoImgText span {
+    height: 1px;
+    width: 120px;
+    background-color: rgba(255, 255, 255, 0.697);
+}
+
+.aboutInfoTwoImg img {
+    width: 370px;
+    height: 100%;
 }
 
 .aboutInfoTwoImg p {
-    width: 300px;
+    width: 220px;
     height: 40px;
     font-family: 'Aref Ruqaa';
     font-style: normal;
@@ -221,7 +255,8 @@
     line-height: 47px;
     /* identical to box height */
     color: #A3A3A3;
-    transform: rotate(-90deg);
+    background-color: transparent;
+    text-align: center;
 }
 
 @keyframes animate {
@@ -241,4 +276,604 @@
         -o-transform: translateX(0px);
         opacity: 1;
     }
+}
+
+@media (max-width: 400px) {
+    /* CSS rules for screens up to 400 pixels wide */
+    .aboutH {
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 68px;
+        color: #FFFFFF;
+        border-bottom: 1px solid #fff;
+        width: 214px;
+    }
+    .aboutP {
+        width: 173px;
+        height: 48px;
+        left: 194px;
+        top: 238px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        text-align: right;
+        display: flex;
+        height: 100%;
+        align-items: end;
+    }
+}
+
+@media (max-width: 600px) {
+    /* CSS rules for screens up to 600 pixels wide */
+    .aboutContainer {
+        height: 100%;
+        overflow: hidden;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: inherit;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    .aboutHeaderContainer {
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 270px;
+        padding-bottom: 20px;
+    }
+    .aboutH {
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 50px;
+        line-height: 68px;
+        color: #FFFFFF;
+        border-bottom: 1px solid #fff;
+        width: 214px;
+    }
+    .aboutP {
+        width: 173px;
+        height: 48px;
+        left: 194px;
+        top: 238px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        text-align: right;
+        display: flex;
+        height: 100%;
+        align-items: end;
+    }
+    .aboutSectionImg {
+        width: 100%;
+        height: 530px;
+        background-position: center;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.274), rgba(0, 0, 0, 0.7)), url('../public/aboutSection.png');
+        display: grid;
+        place-items: center;
+        color: white;
+    }
+    .aboutSectionImg p {
+        display: inline-block;
+        color: inherit;
+        background-color: transparent;
+        font-family: 'Aref Ruqaa';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 63px;
+        letter-spacing: -0.04em;
+        color: #FFFFFF;
+        width: 100%;
+        margin: 0;
+        text-align: center;
+        position: relative;
+        line-height: 0.1em;
+        padding: 0.8em 0;
+        cursor: pointer;
+    }
+    .aboutSectionImg p:before,
+    .aboutSectionImg p:after {
+        height: 3px;
+        position: absolute;
+        content: '';
+        -webkit-transition: all 0.35s ease;
+        transition: all 0.35s ease;
+        background-color: #ffffff;
+        width: 0;
+    }
+    .aboutSectionImg p:before {
+        top: 0;
+        left: 0;
+    }
+    .aboutSectionImg p:after {
+        bottom: 0;
+        right: 0;
+    }
+    .aboutSectionImg p:hover,
+    .aboutSectionImg .current a {
+        color: #ffffff;
+    }
+    .aboutSectionImg p:hover:before,
+    .aboutSectionImg .current p:before,
+    .aboutSectionImg p:hover:after,
+    .aboutSectionImg .current p:after {
+        width: 50%;
+    }
+    .aboutSectionImg p:before,
+    .aboutSectionImg .current p:before,
+    .aboutSectionImg p:after,
+    .aboutSectionImg .current p:after {
+        width: 20%;
+    }
+    .aboutInfoContainer {
+        width: 90%;
+        height: 100%;
+        padding: 100px 0px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+    .aboutInfoOne {
+        display: flex;
+        width: 100%;
+        gap: 50px;
+        align-items: center;
+        padding-bottom: 50px;
+        justify-content: center;
+    }
+    .aboutInfoTextOne {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        align-items: center;
+    }
+    .aboutInfoTextOne p:nth-child(1) {
+        width: 340px;
+        height: 80px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        color: #FFFFFF;
+    }
+    .aboutInfoTextOne p:nth-child(2) {
+        width: 338px;
+        height: 96px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        color: #FFFFFF;
+    }
+    .aboutInfoTwo {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        flex-direction: column-reverse;
+        height: 100%;
+        align-items: center;
+        gap: 30px;
+    }
+    .aboutInfoTextTwo p {
+        width: 337px;
+        height: 272px;
+        left: 36px;
+        top: 1847px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        color: #FFFFFF;
+    }
+    .aboutInfoImage img {
+        width: 100%;
+        height: 100%;
+    }
+    .aboutInfoImage {
+        animation: 1s ani;
+        -webkit-animation: 1s ani;
+        animation-iteration-count: 1;
+        animation-delay: 0.5s;
+        padding-right: 0px;
+        width: 305px;
+        height: 456px;
+        padding-right: 20px;
+        background-color: transparent;
+        display: none;
+    }
+    @keyframes ani {
+        from {
+            transform: translateX(500px);
+            -webkit-transform: translateX(500px);
+            -moz-transform: translateX(500px);
+            -ms-transform: translateX(500px);
+            -o-transform: translateX(500px);
+            opacity: 0;
+        }
+        to {
+            transform: translateX(0px);
+            -webkit-transform: translateX(0px);
+            -moz-transform: translateX(0px);
+            -ms-transform: translateX(0px);
+            -o-transform: translateX(0px);
+            opacity: 1;
+        }
+    }
+    .aboutInfoTwoImg {
+        position: relative;
+        width: 371px;
+        height: 556px;
+        left: unset;
+        top: unset;
+        animation: 1s animate;
+        -webkit-animation: 1s animate;
+        animation-iteration-count: 1;
+        animation-delay: 1s;
+        display: flex;
+        align-items: unset;
+        justify-content: unset;
+    }
+    .aboutInfoTwoImgText {
+        position: absolute;
+        top: 46%;
+        left: -83%;
+        transform: rotate(90deg);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        background-color: transparent;
+        height: 47px;
+        width: 555.5px;
+        height: 37px;
+        -webkit-transform: rotate(-90deg);
+        -moz-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+        -o-transform: rotate(-90deg);
+    }
+    .aboutInfoTwoImgText span {
+        height: 1px;
+        width: 120px;
+        background-color: rgba(255, 255, 255, 0.697);
+    }
+    .aboutInfoImage img {
+        width: 328px;
+        height: 556px;
+    }
+    .aboutInfoTwoImg p {
+        width: 217px;
+        font-family: 'Aref Ruqaa';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 25px;
+        line-height: 47px;
+        /* identical to box height */
+        color: #A3A3A3;
+        background-color: transparent;
+        text-align: center;
+    }
+    @keyframes animate {
+        from {
+            transform: translateX(500px);
+            -webkit-transform: translateX(500px);
+            -moz-transform: translateX(500px);
+            -ms-transform: translateX(500px);
+            -o-transform: translateX(500px);
+            opacity: 0;
+        }
+        to {
+            transform: translateX(0px);
+            -webkit-transform: translateX(0px);
+            -moz-transform: translateX(0px);
+            -ms-transform: translateX(0px);
+            -o-transform: translateX(0px);
+            opacity: 1;
+        }
+    }
+}
+
+
+/* CSS rules for screens with a minimum width of 601 pixels */
+
+@media (min-width: 601px) {
+    /* CSS rules for screens starting from 601 pixels wide */
+    .aboutContainer {
+        height: 100%;
+        overflow: hidden;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: inherit;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    .aboutHeaderContainer {
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 270px;
+        padding-bottom: 20px;
+    }
+    .aboutH {
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 60px;
+        line-height: 68px;
+        color: #FFFFFF;
+        border-bottom: 1px solid #fff;
+        width: 264px;
+    }
+    .aboutP {
+        width: 173px;
+        height: 48px;
+        left: 194px;
+        top: 238px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        text-align: right;
+        display: flex;
+        height: 100%;
+        align-items: end;
+    }
+    .aboutSectionImg {
+        width: 100%;
+        height: 530px;
+        background-position: center;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.274), rgba(0, 0, 0, 0.7)), url('../public/aboutSection.png');
+        display: grid;
+        place-items: center;
+        color: white;
+    }
+    .aboutSectionImg p {
+        display: inline-block;
+        color: inherit;
+        background-color: transparent;
+        font-family: 'Aref Ruqaa';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 50px;
+        line-height: 63px;
+        letter-spacing: -0.04em;
+        color: #FFFFFF;
+        width: 100%;
+        margin: 0;
+        text-align: center;
+        position: relative;
+        line-height: 0.1em;
+        padding: 0.8em 0;
+        cursor: pointer;
+    }
+    .aboutSectionImg p:before,
+    .aboutSectionImg p:after {
+        height: 3px;
+        position: absolute;
+        content: '';
+        -webkit-transition: all 0.35s ease;
+        transition: all 0.35s ease;
+        background-color: #ffffff;
+        width: 0;
+    }
+    .aboutSectionImg p:before {
+        top: 0;
+        left: 0;
+    }
+    .aboutSectionImg p:after {
+        bottom: 0;
+        right: 0;
+    }
+    .aboutSectionImg p:hover,
+    .aboutSectionImg .current a {
+        color: #ffffff;
+    }
+    .aboutSectionImg p:hover:before,
+    .aboutSectionImg .current p:before,
+    .aboutSectionImg p:hover:after,
+    .aboutSectionImg .current p:after {
+        width: 50%;
+    }
+    .aboutSectionImg p:before,
+    .aboutSectionImg .current p:before,
+    .aboutSectionImg p:after,
+    .aboutSectionImg .current p:after {
+        width: 20%;
+    }
+    .aboutInfoContainer {
+        width: 90%;
+        height: 100%;
+        padding: 100px 0px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+    .aboutInfoOne {
+        display: flex;
+        width: 100%;
+        gap: 50px;
+        align-items: center;
+        padding-bottom: 100px;
+        justify-content: center;
+    }
+    .aboutInfoTextOne {
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        align-items: center;
+    }
+    .aboutInfoTextOne p:nth-child(1) {
+        width: 340px;
+        height: 80px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 20px;
+        color: #FFFFFF;
+    }
+    .aboutInfoTextOne p:nth-child(2) {
+        width: 338px;
+        height: 96px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 20px;
+        color: #FFFFFF;
+    }
+    .aboutInfoTwo {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        flex-direction: column-reverse;
+        height: 100%;
+        align-items: center;
+        gap: 30px;
+    }
+    .aboutInfoTextTwo p {
+        width: 337px;
+        height: 272px;
+        left: 36px;
+        top: 1847px;
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 20px;
+        color: #FFFFFF;
+    }
+    .aboutInfoImage img {
+        width: 100%;
+        height: 100%;
+    }
+    .aboutInfoImage {
+        animation: 1s ani;
+        -webkit-animation: 1s ani;
+        animation-iteration-count: 1;
+        animation-delay: 0.5s;
+        padding-right: 0px;
+        width: 305px;
+        height: 456px;
+        padding-right: 20px;
+        background-color: transparent;
+        display: none;
+    }
+    @keyframes ani {
+        from {
+            transform: translateX(500px);
+            -webkit-transform: translateX(500px);
+            -moz-transform: translateX(500px);
+            -ms-transform: translateX(500px);
+            -o-transform: translateX(500px);
+            opacity: 0;
+        }
+        to {
+            transform: translateX(0px);
+            -webkit-transform: translateX(0px);
+            -moz-transform: translateX(0px);
+            -ms-transform: translateX(0px);
+            -o-transform: translateX(0px);
+            opacity: 1;
+        }
+    }
+    .aboutInfoTwoImg {
+        position: relative;
+        width: 371px;
+        height: 556px;
+        left: unset;
+        top: unset;
+        animation: 1s animate;
+        -webkit-animation: 1s animate;
+        animation-iteration-count: 1;
+        animation-delay: 1s;
+        display: flex;
+        align-items: unset;
+        justify-content: unset;
+    }
+    .aboutInfoTwoImgText {
+        position: absolute;
+        top: 46%;
+        left: -83%;
+        transform: rotate(90deg);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        background-color: transparent;
+        height: 47px;
+        width: 555.5px;
+        height: 37px;
+        -webkit-transform: rotate(-90deg);
+        -moz-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+        -o-transform: rotate(-90deg);
+    }
+    .aboutInfoTwoImgText span {
+        height: 1px;
+        width: 120px;
+        background-color: rgba(255, 255, 255, 0.697);
+    }
+    .aboutInfoImage img {
+        width: 328px;
+        height: 556px;
+    }
+    .aboutInfoTwoImg p {
+        width: 217px;
+        font-family: 'Aref Ruqaa';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 25px;
+        line-height: 47px;
+        /* identical to box height */
+        color: #A3A3A3;
+        background-color: transparent;
+        text-align: center;
+    }
+    @keyframes animate {
+        from {
+            transform: translateX(500px);
+            -webkit-transform: translateX(500px);
+            -moz-transform: translateX(500px);
+            -ms-transform: translateX(500px);
+            -o-transform: translateX(500px);
+            opacity: 0;
+        }
+        to {
+            transform: translateX(0px);
+            -webkit-transform: translateX(0px);
+            -moz-transform: translateX(0px);
+            -ms-transform: translateX(0px);
+            -o-transform: translateX(0px);
+            opacity: 1;
+        }
+    }
+}
+
+
+/* CSS rules for screens with a minimum width of 901 pixels and a maximum width of 1200 pixels */
+
+@media (min-width: 901px) and (max-width: 1200px) {
+    /* CSS rules for screens between 901 and 1200 pixels wide */
+}
+
+
+/* CSS rules for screens with a minimum width of 1201 pixels */
+
+@media (min-width: 1201px) {
+    /* CSS rules for screens starting from 1201 pixels wide */
 }
