--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -464,6 +464,7 @@
         height: 100%;
         align-items: center;
         gap: 30px;
+        padding-bottom: 20px;
     }
     .aboutInfoTextTwo p {
         width: 337px;
@@ -744,6 +745,7 @@
         height: 100%;
         align-items: center;
         gap: 30px;
+        padding-bottom: 50px;
     }
     .aboutInfoTextTwo p {
         width: 337px;
