--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -280,6 +280,24 @@
 
 @media (max-width: 400px) {
     /* CSS rules for screens up to 400 pixels wide */
+    .aboutContainer {
+        height: 100%;
+        overflow: hidden;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: inherit;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    .aboutHeaderContainer {
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 270px;
+        padding-bottom: 20px;
+    }
     .aboutH {
         font-family: 'Manrope';
         font-style: normal;
@@ -304,6 +322,25 @@
         display: flex;
         height: 100%;
         align-items: end;
+    }
+    .aboutSectionImg p {
+        display: inline-block;
+        color: inherit;
+        background-color: transparent;
+        font-family: 'Aref Ruqaa';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 63px;
+        letter-spacing: -0.04em;
+        color: #FFFFFF;
+        width: 100%;
+        margin: 0;
+        text-align: center;
+        position: relative;
+        line-height: 0.1em;
+        padding: 0.8em 0;
+        cursor: pointer;
     }
 }
 
@@ -331,11 +368,11 @@
         font-family: 'Manrope';
         font-style: normal;
         font-weight: 600;
-        font-size: 45px;
+        font-size: 38px;
         line-height: 68px;
         color: #FFFFFF;
         border-bottom: 1px solid #fff;
-        width: 214px;
+        width: 180px;
     }
     .aboutP {
         width: 173px;
