--- a/styles/globals.css
+++ b/styles/globals.css
@@ -267,7 +267,7 @@
         width: 100%;
         height: 100%;
         position: fixed;
-        top: 100px;
+        top: 80px;
         z-index: 10000000000;
         transform: translateY(-500px);
         -webkit-transform: translateY(-500px);
@@ -316,10 +316,11 @@
         -moz-transition: 0.7s;
         -ms-transition: 0.7s;
         -o-transition: 0.7s;
+        background-color: rgb(4, 4, 4);
     }
     .navExtraP:hover {
         transition: 0.7s;
-        color: rgba(255, 255, 255, 0.575);
+        background-color: rgba(255, 255, 255, 0.575);
         -webkit-transition: 0.7s;
         -moz-transition: 0.7s;
         -ms-transition: 0.7s;
